--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+ <h1>"Why i want to become a developer?"</h1>
+ <p>Because i find satisfaction in helping consumers, companies, and organization find the solutions they need</p>
 </body>
-
 </html>
