--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	
-	 <h1>Why i want to become a developer?</h1>
+	 <h1> Why I want to become a developer?</h1>
  <p>Because i find satisfaction in helping consumers, companies, and organization find the solutions they need</p>
     <script type="text/javascript" src="./script.js">
 </script>
