--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<!-- the entire body must be written by student -->
 	
 	 <h1> Why I want to become a developer?</h1>
-     <p>Because i find satisfaction in helping consumers, companies, and organization find the solutions they need</p>
+     <p>I want to become a developer Because i find satisfaction in helping consumers, companies, and organization find the solutions they need</p>
    
 	<script type="text/javascript" src="./script.js">
 </script>
